stateName for container elements with Global.scss definitions for 'expanded' | 'unfolded' | 'collapsed' as been refactored and fixed to preview correctly.

--- a/source/layouts/containers/Header/ButtonsHeader/ButtonsHeader.scss
+++ b/source/layouts/containers/Header/ButtonsHeader/ButtonsHeader.scss
@@ -1,51 +1,82 @@
 //--|🠊 ButtonsHeader.scss 🠈|--//
+@use '../../../designs/Palettes.scss';
+
 @mixin desktop-landscape {
   //--|🠋 Desktop (Landscape) 🠋|--//
-  grid-template: //--|🠋 1080px 🠋|--//
-    repeat(2, 4rem) 1fr repeat(2, 4rem) //--|🠈 rows 🠈|--//
-    / 6rem 1fr 6rem; //--|🠈 columns 🠈|--//
+  section[class*='fore'] {
+    z-index: 2;
+    nav[class*='preview'] {
+      display: inherit;
+      grid-area: 1 / 1 / 3 / 4;
+      grid-template-rows: repeat(2, 1fr); //--|🠈 rows 🠈|--\\
+      button[id*='header'] {
+        z-index: 1;
+        &[id*='view-app'] {
+          grid-area: 1 / 1 / 3 / 2;
+        }
+        &[id*='default'] {
+          grid-area: 1 / 3 / 3 / 4;
+        }
+        &[id*='routing'] {
+          grid-area: 1 / 5 / 3 / 6;
+        }
+      }
+      ol[class*='preview'] {
+        z-index: 0;
+        display: flex;
+        grid-area: 1 / 4 / 3 / 5;
+        transition: transform 250ms ease-in-out;
+        li {
+          flex: 0 0 100%; //--|🠊 Flex Grow / Flex Shrink / Flex Basis 🠈|--//
+          display: inherit;
+          align-items: center;
+          justify-content: center;
+          h6 {
+            font-weight: 600;
+          }
+        }
 
-  @media screen and (max-height: 768px) {
-    grid-template: repeat(2, 3rem) 1fr repeat(2, 3rem) / 4rem 1fr 4rem;
-  }
-  @media screen and (max-height: 480px) {
-    grid-template: repeat(2, 2rem) 1fr repeat(2, 2rem) / 3rem 1fr 3rem;
-  }
-  @media screen and (max-height: 360px) {
-    grid-template: repeat(2, 1.5rem) 1fr repeat(2, 1.5rem) / 2rem 1fr 2rem;
-  }
-}
-@mixin mobile-portrait {
-  //--|🠋 Mobile (Portrait) 🠋|--//
-  grid-template: //--|🠋 1920px 🠋|--//
-    repeat(2, 6rem) 1fr repeat(2, 6rem) //--|🠈 rows 🠈|--//
-    / 4rem 1fr 4rem; //--|🠈 columns 🠈|--//
+        &[class*='slide-def'] {
+          //--|🠋 default 🠋|--\\
+          transform: translateX(0);
+        }
+        &[class*='slide-rou'] {
+          //--|🠋 routing 🠋|--\\
+          transform: translateX(-100%);
+        }
+      }
 
-  @media screen and (max-width: 768px) {
-    grid-template: repeat(2, 5rem) 1fr repeat(2, 5rem) / 3rem 1fr 3rem;
+      grid-template-columns: 128px 48px auto 1fr auto 48px 128px; //--|🠈 columns 🠈|--\\
+      @media screen and (max-height: 768px) {
+        grid-template-columns: 96px 32px auto 1fr auto 32px 96px; //--|🠈 columns 🠈|--\\
+      }
+      @media screen and (max-height: 480px) {
+        grid-template-columns: 64px 24px auto 1fr auto 24px 64px; //--|🠈 columns 🠈|--\\
+      }
+      @media screen and (max-height: 360px) {
+        grid-template-columns: 48px 16px auto 1fr auto 16px 48px; //--|🠈 columns 🠈|--\\
+      }
+    }
+    div[class*='software'] {
+      grid-area: 3 / 1 / 6 / 4;
+      background: rgba(Palettes.$indexLand-light, 0.5);
+    }
   }
-  @media screen and (max-width: 480px) {
-    grid-template: repeat(2, 3rem) 1fr repeat(2, 3rem) / 2rem 1fr 2rem;
+  figure[class*='mid'] {
+    z-index: 1;
   }
-  @media screen and (max-width: 360px) {
-    grid-template: repeat(2, 2rem) 1fr repeat(2, 2rem) / 1.5rem 1fr 1.5rem;
+  div[class*='back'] {
+    z-index: 0;
   }
-}
-
-header[id*='buttons'] {
-  @media screen and (orientation: landscape) {
-    @include desktop-landscape();
-  }
-  @media screen and (orientation: portrait) {
-    @include mobile-portrait();
-  }
-
+  section[class*='foreground'],
+  figure[class*='midground'],
   div[class='background'] {
     display: inherit;
     grid-template: inherit;
     grid-area: 1 / 1 / 6 / 4;
-    background: rgba(darkred, 0.25);
+    // background: rgba(darkred, 0.25);
 
+    /*
     header {
       grid-area: 1 / 1 / 3 / 4;
       div {
@@ -81,5 +112,53 @@ header[id*='buttons'] {
         }
       }
     }
+    */
+  }
+}
+@mixin mobile-portrait {
+  //--|🠋 Mobile (Portrait) 🠋|--//
+}
+
+@mixin desktop-default {
+  //--|🠋 Desktop (Landscape) 🠋|--//
+  grid-template: //--|🠋 1080px 🠋|--//
+    repeat(2, 4rem) 1fr repeat(2, 4rem) //--|🠈 rows 🠈|--//
+    / 6rem 1fr 6rem; //--|🠈 columns 🠈|--//
+
+  @media screen and (max-height: 768px) {
+    grid-template: repeat(2, 3rem) 1fr repeat(2, 3rem) / 4rem 1fr 4rem;
+  }
+  @media screen and (max-height: 480px) {
+    grid-template: repeat(2, 2rem) 1fr repeat(2, 2rem) / 3rem 1fr 3rem;
+  }
+  @media screen and (max-height: 360px) {
+    grid-template: repeat(2, 1.5rem) 1fr repeat(2, 1.5rem) / 2rem 1fr 2rem;
+  }
+}
+@mixin mobile-default {
+  //--|🠋 Mobile (Portrait) 🠋|--//
+  grid-template: //--|🠋 1920px 🠋|--//
+    repeat(2, 6rem) 1fr repeat(2, 6rem) //--|🠈 rows 🠈|--//
+    / 4rem 1fr 4rem; //--|🠈 columns 🠈|--//
+
+  @media screen and (max-width: 768px) {
+    grid-template: repeat(2, 5rem) 1fr repeat(2, 5rem) / 3rem 1fr 3rem;
+  }
+  @media screen and (max-width: 480px) {
+    grid-template: repeat(2, 3rem) 1fr repeat(2, 3rem) / 2rem 1fr 2rem;
+  }
+  @media screen and (max-width: 360px) {
+    grid-template: repeat(2, 2rem) 1fr repeat(2, 2rem) / 1.5rem 1fr 1.5rem;
+  }
+}
+
+header[id*='buttons'] {
+  @media screen and (orientation: landscape) {
+    @include desktop-default();
+    @include desktop-landscape();
+  }
+  @media screen and (orientation: portrait) {
+    @include mobile-default();
+    @include mobile-portrait();
   }
 }
