--- a/source/layouts/containers/Main/ButtonsMain/ButtonsMain.scss
+++ b/source/layouts/containers/Main/ButtonsMain/ButtonsMain.scss
@@ -4,9 +4,47 @@
 @mixin desktop-landscape {
   //--|🠋 Desktop (Elements) 🠋|--\\
   .default-buttons {
-    section[class*='foreground'] {
+    section[class*='fore'] {
       z-index: 2;
       //--|🠊 display: grid; 🠈|--\\
+      header,
+      footer {
+        z-index: 2;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr); //--|🠈 rows 🠈|--\\
+        &[class*='header'] {
+          grid-area: 1 / 1 / 3 / 6;
+          button[id*='open-head'] {
+            grid-area: 1 / 1 / 3 / 2;
+          }
+          menu {
+            display: flex;
+            align-items: center;
+            grid-area: 1 / 2 / 3 / 3;
+            justify-content: space-around;
+          }
+        }
+        &[class*='footer'] {
+          grid-area: 4 / 1 / 6 / 6;
+          nav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            grid-area: 1 / 2 / 3 / 3;
+          }
+        }
+
+        grid-template-columns: 128px 1fr 128px; //--|🠈 columns 🠈|--\\
+        @media screen and (max-height: 768px) {
+          grid-template-columns: 96px 1fr 96px; //--|🠈 columns 🠈|--\\
+        }
+        @media screen and (max-height: 480px) {
+          grid-template-columns: 64px 1fr 64px; //--|🠈 columns 🠈|--\\
+        }
+        @media screen and (max-height: 360px) {
+          grid-template-columns: 48px 1fr 48px; //--|🠈 columns 🠈|--\\
+        }
+      }
       aside[class*='container'] {
         z-index: 0;
         &[id*='darkside'] {
@@ -49,46 +87,8 @@
         background: none;
         grid-area: 3 / 3 / 4 / 4;
       }
-      header,
-      footer {
-        z-index: 2;
-        display: grid;
-        grid-template-rows: repeat(2, 1fr); //--|🠈 rows 🠈|--\\
-        &[class*='header'] {
-          grid-area: 1 / 1 / 3 / 6;
-          button[id*='open-head'] {
-            grid-area: 1 / 1 / 3 / 2;
-          }
-          nav {
-            display: flex;
-            align-items: center;
-            grid-area: 1 / 2 / 3 / 3;
-            justify-content: space-around;
-          }
-        }
-        &[class*='footer'] {
-          grid-area: 4 / 1 / 6 / 6;
-          nav {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            grid-area: 1 / 2 / 3 / 3;
-          }
-        }
-
-        grid-template-columns: 128px 1fr 128px; //--|🠈 columns 🠈|--\\
-        @media screen and (max-height: 768px) {
-          grid-template-columns: 96px 1fr 96px; //--|🠈 columns 🠈|--\\
-        }
-        @media screen and (max-height: 480px) {
-          grid-template-columns: 64px 1fr 64px; //--|🠈 columns 🠈|--\\
-        }
-        @media screen and (max-height: 360px) {
-          grid-template-columns: 48px 1fr 48px; //--|🠈 columns 🠈|--\\
-        }
-      }
     }
-    figure[class*='midground'] {
+    figure[class*='mid'] {
       z-index: 1;
       //--|🠊 display: grid; 🠈|--\\
       aside[class*='code'] {
@@ -241,7 +241,7 @@
         }
       }
     }
-    div[class*='background'] {
+    div[class*='back'] {
       z-index: 0;
       //--|🠊 display: grid; 🠈|--\\
       aside[class*='grade'] {
@@ -456,7 +456,7 @@ main[id*='buttons'] {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    ul[class*='carousel'] {
+    ul[class*='preview'] {
       display: flex;
       height: inherit;
       //--|🠊 padding: 0; 🠈|--\\
@@ -476,8 +476,6 @@ main[id*='buttons'] {
   }
   aside[class*='carousel'] {
     ol[class*='preview'] {
-    }
-    ol[class*='carousel'] {
       height: 100%;
       display: flex;
       //--|🠊 padding: 0; 🠈|--\\
@@ -506,7 +504,7 @@ main[id*='buttons'] {
           transform: translateY(-600%);
         }
       }
-      &[class*='preview'] {
+      &[class*='carousel'] {
         &[class*='alt'] {
           //--|🠋 alternative 🠋|--\\
           transform: translateX(-100%);
